# LuminalVGD

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSING.md  README.md  THIRD-PARTY-NOTICES.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/alttab-stress/: Cargo.toml
crates/alttab-stress/src/: main.rs
crates/luminal-driver-proto/: Cargo.toml
crates/luminal-driver-proto/src/: lib.rs
crates/luminal-vgd-core/: Cargo.toml
crates/luminal-vgd-core/src/: adapter.rs  edid.rs  error.rs  identity.rs  lib.rs  modes.rs  permanent.rs  persist.rs  ring.rs  session.rs
crates/luminal-vgd-driver/: Cargo.toml  build.rs
crates/luminal-vgd-driver/src/: dispatch.rs  lib.rs
crates/luminal-vgd-driver/src/shell/: bindings.rs  control.rs  cursor.rs  dxgi.rs  entry.rs  mod.rs  monitors.rs  ring.rs  swapchain.rs
crates/luminal-vgd-ffi/: Cargo.toml  build.rs
crates/luminal-vgd-ffi/include/: luminal_vgd.h
crates/luminal-vgd-ffi/src/: lib.rs
crates/luminal-vgd-host/: Cargo.toml
crates/luminal-vgd-host/src/: config.rs  controller.rs  device.rs  lib.rs  notice.rs  ring_watch.rs
crates/vgd-probe/: Cargo.toml
crates/vgd-probe/src/: main.rs
docs/: BUILDING.md  DESIGN.md  FEATURE-MATRIX.md  INSTALL.md  WGC-RELIABILITY.md
packaging/: luminalvgd.inf
scripts/: build-driver.cmd  clear-force-integrity.ps1  install-driver.ps1  package-release.ps1  sign-driver.ps1  uninstall-driver.ps1
