# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "alttab-stress"
version = "0.1.0"
description = "WGC-RELIABILITY.md §7 harness: hammer exclusive-fullscreen enter/leave on a LuminalVGD monitor while consuming its frame ring, and fail loudly on a wedged transition (the libvirtualdisplay alttab_stress race, ported)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
luminal-driver-proto = { path = "../luminal-driver-proto" }
luminal-vgd-host = { path = "../luminal-vgd-host" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
