# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "luminal-vgd-driver"
version = "0.1.0"
description = "LuminalVGD UMDF IddCx driver. The control-plane dispatcher and session logic compile and test everywhere; the IddCx/D3D shell is Windows+eWDK-only (build with --features shell inside the eWDK environment, see docs/BUILDING.md)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# rlib for the portable dispatch tests; cdylib is the UMDF driver DLL
# (contains nothing unless the `shell` feature is enabled).
crate-type = ["lib", "cdylib"]

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 33

[dependencies]
luminal-driver-proto = { path = "../luminal-driver-proto" }
luminal-vgd-core = { path = "../luminal-vgd-core" }
wdk = { version = "0.4.1", optional = true }
wdk-sys = { version = "0.5.1", optional = true }
tracelogging = { version = "1.2", optional = true }

[target.'cfg(windows)'.dependencies]
# The shell needs real COM (DXGI/D3D11), hence `windows` rather than the
# vtable-less windows-sys the host crate uses.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_Security_Authorization",
], optional = true }

[build-dependencies]
bindgen = { version = "0.71", optional = true }

# Non-optional (wdk-sys's build script locates this package via cargo
# metadata, which resolves default features only) but host-filtered, so
# macOS/Linux portable builds never compile it. build.rs only *calls* it
# under the shell feature.
[target.'cfg(windows)'.build-dependencies]
wdk-build = "0.5.1"

[features]
# The Windows IddCx shell. Requires the eWDK build environment plus
# LIBCLANG_PATH (docs/BUILDING.md); everything else in this crate builds
# and tests without it, on any OS.
shell = [
    "dep:wdk",
    "dep:wdk-sys",
    "dep:bindgen",
    "dep:windows",
    "dep:tracelogging",
]
