# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "luminal-vgd-ffi"
version = "0.1.0"
description = "C ABI over luminal-vgd-host for the LuminalShine (C++) integration: control-device ops and ring consumption. Built as a staticlib for the MSYS2 UCRT64 toolchain (target x86_64-pc-windows-gnullvm)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
luminal-driver-proto = { path = "../luminal-driver-proto" }
luminal-vgd-host = { path = "../luminal-vgd-host" }

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }
